# cuco

./: .gitignore  README.md  pyproject.toml  setup.py
cuco/: cuco_init  cuco_launch  cuco_run  cuco_visualize  eval_hydra.py  init_workload.py  launch_hydra.py  logo.py  run_workload.py  site_config.py
cuco/compile/: __init__.py
cuco/core/: __init__.py  novelty_judge.py  runner.py  sampler.py  summarizer.py  wrap_eval.py
cuco/database/: dbase.py  islands.py
cuco/edit/: apply_diff.py  apply_full.py
cuco/launch/: local.py  scheduler.py  slurm.py
cuco/llm/: client.py  embedding.py  query.py
cuco/llm/models/: __init__.py  anthropic.py  claude_cli.py  pricing.py
cuco/nccl/: __init__.py  _nccl.pyx
cuco/plots/: code_path_anim.py  plot_improvement.py
cuco/prompts/: prompts_base.py  prompts_cross.py  prompts_full.py
cuco/templates/: evaluate.py.tmpl  gitignore.tmpl
cuco/transform/: __init__.py  cuda_analyzer.py  pipeline.py  transformer.py
cuco/utils/: utils_hydra.py
cuco/webui/: visualization.py  viz_tree.html
docs/: adding-a-workload.md  architecture.md  configuration.md  evaluation.md  fast-path-agent.md  getting-started.md  index.html  llm-backends.md  slow-path-agent.md  visualization.md
examples/ds_v3_moe/: .gitignore  evaluate.py  run_evo.py  run_transform.py
examples/ds_v3_moe/_transform_host_output/: transform_summary.json
examples/ds_v3_moe/_transform_host_work/: cuda_program.cu  iter_1_code.cu  iter_1_system_prompt.txt  iter_2_result.txt
tests/: test_lsa_allreduce.py
workloads/ds_v3_moe/: ds_v3_moe.cu  run_evo.py
(+96 files in other folders)
